# pgshift

./: .gitignore  CHANGELOG.md  LICENSE  README.md  version.sh
.github/workflows/: release.yml
pgshift/: .gitignore  README.md  SPEC.md  create_icon.py  index.html  package-lock.json  package.json  pnpm-lock.yaml
pgshift/src/: App.css  App.tsx
pgshift/src-tauri/: Cargo.toml  tauri.conf.json
pgshift/src-tauri/capabilities/: default.json
pgshift/src-tauri/icons/: README.md  icon.icns
pgshift/src-tauri/migrations/20260203101447__119-248/: down.sql  meta.json  up.sql
pgshift/src-tauri/migrations/20260203101454__119-248/: down.sql  meta.json  up.sql
pgshift/src-tauri/migrations/20260203101546__test/: down.sql  meta.json  up.sql
pgshift/src-tauri/migrations/20260203103000__16-11/: down.sql  meta.json  up.sql
pgshift/src-tauri/migrations/20260203103349__d/: down.sql  meta.json  up.sql
pgshift/src-tauri/migrations/20260203105037__tests/: down.sql  meta.json  up.sql
pgshift/src-tauri/migrations/20260203105115__ada/: down.sql  meta.json  up.sql
pgshift/src-tauri/migrations/20260203105145__adada/: down.sql  meta.json  up.sql
pgshift/src-tauri/src/: commands.rs  lib.rs  main.rs
pgshift/src-tauri/src/apply/: exec.rs  mod.rs
pgshift/src-tauri/src/db/: connect.rs  introspect.rs  mod.rs
pgshift/src-tauri/src/diff/: diff.rs  mod.rs
pgshift/src-tauri/src/model/: mod.rs  schema.rs
pgshift/src-tauri/src/render/: mod.rs  sql.rs
pgshift/src/components/: DiffDetails.tsx  DiffTree.tsx  LogViewer.tsx  SqlPreview.tsx
pgshift/src/pages/: ApplyPage.tsx  (+6 more)
(+1 files in other folders)
